--- a/MLPipeline_Week1_Session1.ipynb
+++ b/MLPipeline_Week1_Session1.ipynb
@@ -12,11 +12,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 1,
       "metadata": {
         "id": "0x8PhK9DkB9t"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/angelo/Documents/VSCode/practice-repo/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ],
       "source": [
         "# Importing libraries\n",
         "import pandas as pd\n",
@@ -27,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 3,
       "metadata": {
         "id": "jaAilnkqkTnY"
       },
@@ -101,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -125,24 +134,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "count       61.000000\n",
-            "mean     15435.147541\n",
-            "std      11444.037315\n",
+            "count       58.000000\n",
+            "mean     15387.000000\n",
+            "std      11320.259841\n",
             "min       5151.000000\n",
-            "25%       6785.000000\n",
-            "50%      10345.000000\n",
-            "75%      18344.000000\n",
+            "25%       6808.500000\n",
+            "50%      11095.000000\n",
+            "75%      18120.500000\n",
             "max      45400.000000\n",
             "Name: price, dtype: float64\n",
             "\n",
-            " 0\n"
+            " 3\n"
           ]
         }
       ],
@@ -153,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 6,
       "metadata": {
         "id": "SVLL09RhlIHc"
       },
@@ -172,7 +181,7 @@
             "num-of-cylinders    0\n",
             "horsepower          0\n",
             "average-mileage     0\n",
-            "price               1\n",
+            "price               3\n",
             "dtype: int64\n",
             "Missing values after replacement:\n",
             " index               0\n",
@@ -204,7 +213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 7,
       "metadata": {
         "id": "ZhT12ZI9lM9b"
       },
@@ -231,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -264,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "7txhJGntlUpi"
       },
@@ -275,22 +284,22 @@
           "text": [
             "Total cars per company:\n",
             " company\n",
+            "toyota           7\n",
+            "bmw              6\n",
+            "mazda            5\n",
+            "nissan           5\n",
+            "mercedes-benz    4\n",
+            "audi             4\n",
+            "volkswagen       4\n",
+            "mitsubishi       4\n",
+            "chevrolet        3\n",
+            "jaguar           3\n",
+            "isuzu            3\n",
+            "honda            3\n",
+            "porsche          3\n",
+            "alfa-romero      3\n",
             "dodge            2\n",
             "volvo            2\n",
-            "honda            3\n",
-            "alfa-romero      3\n",
-            "isuzu            3\n",
-            "jaguar           3\n",
-            "porsche          3\n",
-            "chevrolet        3\n",
-            "volkswagen       4\n",
-            "audi             4\n",
-            "mercedes-benz    4\n",
-            "mitsubishi       4\n",
-            "nissan           5\n",
-            "mazda            5\n",
-            "bmw              6\n",
-            "toyota           7\n",
             "Name: count, dtype: int64\n"
           ]
         }
@@ -303,7 +312,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 10,
       "metadata": {
         "id": "bALqomL0lZc6"
       },
@@ -329,7 +338,25 @@
             "46        porsche  convertible  37028.0\n",
             "54         toyota        wagon  15750.0\n",
             "58     volkswagen        sedan   9995.0\n",
-            "60          volvo        wagon  13415.0\n",
+            "60          volvo        wagon  13415.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Find each company’s highest-priced car\n",
+        "highest_priced_cars = df.groupby('company')['price'].idxmax()\n",
+        "print(\"Highest priced cars per company:\\n\", df.loc[highest_priced_cars, ['company', 'body-style', 'price']])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "\n",
             "Lowest priced cars per company:\n",
             "           company   body-style    price\n",
@@ -353,34 +380,113 @@
         }
       ],
       "source": [
-        "# Find each company’s highest-priced car\n",
-        "highest_priced_cars = df.groupby('company')['price'].idxmax()\n",
-        "print(\"Highest priced cars per company:\\n\", df.loc[highest_priced_cars, ['company', 'body-style', 'price']])\n",
-        "\n",
+        "# Find each company’s lowest-priced car\n",
         "lowest_priced_cars = df.groupby('company')['price'].idxmin()\n",
         "print(\"\\nLowest priced cars per company:\\n\", df.loc[lowest_priced_cars, ['company', 'body-style', 'price']])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "Xj8M0T88lciK"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Average mileage per company:\n",
+            " company\n",
+            "alfa-romero      20.333\n",
+            "audi             20.000\n",
+            "bmw              19.000\n",
+            "chevrolet        41.000\n",
+            "dodge            31.000\n",
+            "honda            26.333\n",
+            "isuzu            33.333\n",
+            "jaguar           14.333\n",
+            "mazda            28.000\n",
+            "mercedes-benz    18.000\n",
+            "mitsubishi       29.500\n",
+            "nissan           31.400\n",
+            "porsche          17.000\n",
+            "toyota           28.714\n",
+            "volkswagen       31.750\n",
+            "volvo            23.000\n",
+            "Name: average-mileage, dtype: float64\n"
+          ]
+        }
+      ],
       "source": [
-        "# Find the average mileage of each car-making company\n"
+        "# Find the average mileage of each car-making company\n",
+        "average_mileage_per_company = df.groupby('company')['average-mileage'].mean()\n",
+        "print(\"\\nAverage mileage per company:\\n\", average_mileage_per_company.round(3))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "aJ3x7dhilhX0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Sorted cars by price:\n",
+            "        company body-style   price\n",
+            "13   chevrolet  hatchback  5151.0\n",
+            "27       mazda  hatchback  5195.0\n",
+            "48      toyota  hatchback  5348.0\n",
+            "36  mitsubishi  hatchback  5389.0\n",
+            "28       mazda  hatchback  6095.0\n",
+            "37  mitsubishi  hatchback  6189.0\n",
+            "17       dodge  hatchback  6229.0\n",
+            "14   chevrolet  hatchback  6295.0\n",
+            "49      toyota  hatchback  6338.0\n",
+            "16       dodge  hatchback  6377.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Sort all cars by the price column"
+        "# Sort all cars by the price column\n",
+        "sorted_cars_ascending = df.sort_values(by='price', ascending=True)\n",
+        "print(\"\\nSorted cars by price:\\n\", sorted_cars_ascending[['company', 'body-style', 'price']].head(10))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Sorted cars by price:\n",
+            "           company   body-style    price\n",
+            "35  mercedes-benz      hardtop  45400.0\n",
+            "11            bmw        sedan  41315.0\n",
+            "34  mercedes-benz        sedan  40960.0\n",
+            "46        porsche  convertible  37028.0\n",
+            "12            bmw        sedan  36880.0\n",
+            "26         jaguar        sedan  36000.0\n",
+            "25         jaguar        sedan  35550.0\n",
+            "47        porsche    hatchback  35528.0\n",
+            "45        porsche      hardtop  34028.0\n",
+            "24         jaguar        sedan  32250.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Sort all cars by the price column\n",
+        "sorted_cars_descending = df.sort_values(by='price', ascending=False)\n",
+        "print(\"\\nSorted cars by price:\\n\", sorted_cars_descending[['company', 'body-style', 'price']].head(10))"
       ]
     }
   ],
